// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for delegate 1`] = `
{
  "metrics": Map {
    "DelegateFile.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Program.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromFQTN": "ProgramNamespace.Program",
      "fromFile": "Program.cs",
      "toClassName": "MyDelegate",
      "toFQTN": "DelegateNamespace.MyDelegate",
      "toFile": "DelegateFile.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for enums 1`] = `
{
  "metrics": Map {
    "ClassA.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "ClassB.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Main.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 2,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromFQTN": "Programm.Program",
      "fromFile": "Main.cs",
      "toClassName": "EnumClass",
      "toFQTN": "NamespaceEnumA.EnumClass",
      "toFile": "ClassA.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromFQTN": "Programm.Program",
      "fromFile": "Main.cs",
      "toClassName": "DaysOfWeekB",
      "toFQTN": "NamespaceEnumB.DaysOfWeekB",
      "toFile": "ClassB.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromFQTN": "Programm.Program",
      "fromFile": "Main.cs",
      "toClassName": "DaysOfWeek",
      "toFQTN": "NamespaceEnumA.EnumClass.DaysOfWeek",
      "toFile": "ClassA.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for extended class 1`] = `
{
  "metrics": Map {
    "ClassA.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
    "ClassB.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Main.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromFQTN": "Programm.Program",
      "fromFile": "Main.cs",
      "toClassName": "ClassA",
      "toFQTN": "NamespaceA.ClassA",
      "toFile": "ClassA.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ClassA",
      "fromFQTN": "NamespaceA.ClassA",
      "fromFile": "ClassA.cs",
      "toClassName": "ClassB",
      "toFQTN": "NamespaceB.ClassB",
      "toFile": "ClassB.cs",
      "usageType": "extends",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for generics 1`] = `
{
  "metrics": Map {
    "ClassA.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "ClassB.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 2,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "ClassC.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "ClassD.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
    "GenericClass.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
    "Program.cs" => {
      "coupling_between_objects": 4,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 4,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromFQTN": "mainNamespace.Program",
      "fromFile": "Program.cs",
      "toClassName": "ClassA",
      "toFQTN": "ClassANamespace.ClassA",
      "toFile": "ClassA.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ClassD",
      "fromFQTN": "ClassDNamespace.ClassD",
      "fromFile": "ClassD.cs",
      "toClassName": "ClassB",
      "toFQTN": "ClassBNamespace.ClassB",
      "toFile": "ClassB.cs",
      "usageType": "extends",
    },
    {
      "fromClassName": "Program",
      "fromFQTN": "mainNamespace.Program",
      "fromFile": "Program.cs",
      "toClassName": "ClassC",
      "toFQTN": "ClassCNamespace.ClassC",
      "toFile": "ClassC.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromFQTN": "mainNamespace.Program",
      "fromFile": "Program.cs",
      "toClassName": "ClassD",
      "toFQTN": "ClassDNamespace.ClassD",
      "toFile": "ClassD.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromFQTN": "mainNamespace.Program",
      "fromFile": "Program.cs",
      "toClassName": "GenericClass",
      "toFQTN": "GenericClassNamespace.GenericClass",
      "toFile": "GenericClass.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "GenericClass",
      "fromFQTN": "GenericClassNamespace.GenericClass",
      "fromFile": "GenericClass.cs",
      "toClassName": "ClassB",
      "toFQTN": "ClassBNamespace.ClassB",
      "toFile": "ClassB.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for global classes without namespace 1`] = `
{
  "metrics": Map {
    "ClassA.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Program.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "NoNamespaceDefinition",
      "fromFQTN": "NoNamespaceDefinition",
      "fromFile": "Program.cs",
      "toClassName": "ClassA",
      "toFQTN": "ClassA",
      "toFile": "ClassA.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for global namespaces without import 1`] = `
{
  "metrics": Map {
    "ClassA.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Program.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "NoImport",
      "fromFQTN": "NoImport",
      "fromFile": "Program.cs",
      "toClassName": "ClassA",
      "toFQTN": "NamespaceA.ClassA",
      "toFile": "ClassA.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for interface 1`] = `
{
  "metrics": Map {
    "Programm.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
    "TheInterfaceFile.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromFQTN": "mainNamespace.Program",
      "fromFile": "Programm.cs",
      "toClassName": "TheInterface",
      "toFQTN": "theInterfaceNamespace.TheInterface",
      "toFile": "TheInterfaceFile.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for multiple method calls 1`] = `
{
  "metrics": Map {
    "ClassA.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Program.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "MultipleMethodCalls",
      "fromFQTN": "mainNamespace.MultipleMethodCalls",
      "fromFile": "Program.cs",
      "toClassName": "ClassA",
      "toFQTN": "NamespaceA.ClassA",
      "toFile": "ClassA.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for multiple types in a file 1`] = `
{
  "metrics": Map {
    "ImplementedClassFile.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Programm.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "ClassAsReturnType",
      "fromFQTN": "mainNamespace.ClassAsReturnType",
      "fromFile": "Programm.cs",
      "toClassName": "ImplementClass",
      "toFQTN": "implementClassNamespace.ImplementClass",
      "toFile": "ImplementedClassFile.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "DoThing",
      "fromFQTN": "mainNamespace.DoThing",
      "fromFile": "Programm.cs",
      "toClassName": "ImplementClass",
      "toFQTN": "implementClassNamespace.ImplementClass",
      "toFile": "ImplementedClassFile.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromFQTN": "mainNamespace.Program",
      "fromFile": "Programm.cs",
      "toClassName": "ImplementClass",
      "toFQTN": "implementClassNamespace.ImplementClass",
      "toFile": "ImplementedClassFile.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for nested folder structure 1`] = `
{
  "metrics": Map {
    "BlubController.cs" => {
      "coupling_between_objects": 3,
      "incoming_dependencies": 2,
      "instability": 0.3333333333333333,
      "outgoing_dependencies": 1,
    },
    "Library\\FunctionCalls.cs" => {
      "coupling_between_objects": 4,
      "incoming_dependencies": 2,
      "instability": 0.5,
      "outgoing_dependencies": 2,
    },
    "Library\\IAnotherParameterTypes.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Library\\IParameterTypes.cs" => {
      "coupling_between_objects": 3,
      "incoming_dependencies": 2,
      "instability": 0.3333333333333333,
      "outgoing_dependencies": 1,
    },
    "Library\\MyCustomArgumentNullException.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Library\\ObjectCreations.cs" => {
      "coupling_between_objects": 5,
      "incoming_dependencies": 1,
      "instability": 0.8,
      "outgoing_dependencies": 4,
    },
    "Library\\ParameterTypes.cs" => {
      "coupling_between_objects": 5,
      "incoming_dependencies": 3,
      "instability": 0.4,
      "outgoing_dependencies": 2,
    },
    "Library\\ParameterTypesSpecialized.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 2,
    },
  },
  "relationships": [
    {
      "fromClassName": "ParameterTypes",
      "fromFQTN": "App.CouplingExamples.Library.ParameterTypes",
      "fromFile": "Library\\ParameterTypes.cs",
      "toClassName": "FunctionCalls",
      "toFQTN": "App.CouplingExamples.Library.FunctionCalls",
      "toFile": "Library\\FunctionCalls.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "BlubControllerOne1",
      "fromFQTN": "App.CouplingExamplesOne.BlubControllerOne1",
      "fromFile": "BlubController.cs",
      "toClassName": "FunctionCalls",
      "toFQTN": "App.CouplingExamples.Library.FunctionCalls",
      "toFile": "Library\\FunctionCalls.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "BlubControllerOne2",
      "fromFQTN": "App.CouplingExamplesOne.BlubControllerOne2",
      "fromFile": "BlubController.cs",
      "toClassName": "FunctionCalls",
      "toFQTN": "App.CouplingExamples.Library.FunctionCalls",
      "toFile": "Library\\FunctionCalls.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "BlubControllerTwo1",
      "fromFQTN": "App.CouplingExamplesTwo.BlubControllerTwo1",
      "fromFile": "BlubController.cs",
      "toClassName": "FunctionCalls",
      "toFQTN": "App.CouplingExamples.Library.FunctionCalls",
      "toFile": "Library\\FunctionCalls.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "BlubControllerTwo2",
      "fromFQTN": "App.CouplingExamplesTwo.BlubControllerTwo2",
      "fromFile": "BlubController.cs",
      "toClassName": "FunctionCalls",
      "toFQTN": "App.CouplingExamples.Library.FunctionCalls",
      "toFile": "Library\\FunctionCalls.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "IParameterTypes",
      "fromFQTN": "App.CouplingExamples.Library.IParameterTypes",
      "fromFile": "Library\\IParameterTypes.cs",
      "toClassName": "IAnotherParameterTypes",
      "toFQTN": "App.CouplingExamples.Library.IAnotherParameterTypes",
      "toFile": "Library\\IAnotherParameterTypes.cs",
      "usageType": "implements",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromFQTN": "App.CouplingExamples.Library.ObjectCreations",
      "fromFile": "Library\\ObjectCreations.cs",
      "toClassName": "IParameterTypes",
      "toFQTN": "App.CouplingExamples.Library.IParameterTypes",
      "toFile": "Library\\IParameterTypes.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ParameterTypesSpecialized",
      "fromFQTN": "App.CouplingExamples.Library.ParameterTypesSpecialized",
      "fromFile": "Library\\ParameterTypesSpecialized.cs",
      "toClassName": "IParameterTypes",
      "toFQTN": "App.CouplingExamples.Library.IParameterTypes",
      "toFile": "Library\\IParameterTypes.cs",
      "usageType": "implements",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromFQTN": "App.CouplingExamples.Library.ObjectCreations",
      "fromFile": "Library\\ObjectCreations.cs",
      "toClassName": "MyCustomArgumentNullException",
      "toFQTN": "App.CouplingExamples.Library.MyCustomArgumentNullException",
      "toFile": "Library\\MyCustomArgumentNullException.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ParameterTypes",
      "fromFQTN": "App.CouplingExamples.Library.ParameterTypes",
      "fromFile": "Library\\ParameterTypes.cs",
      "toClassName": "ObjectCreations",
      "toFQTN": "App.CouplingExamples.Library.ObjectCreations",
      "toFile": "Library\\ObjectCreations.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "FunctionCalls",
      "fromFQTN": "App.CouplingExamples.Library.FunctionCalls",
      "fromFile": "Library\\FunctionCalls.cs",
      "toClassName": "ParameterTypes",
      "toFQTN": "App.CouplingExamples.Library.ParameterTypes",
      "toFile": "Library\\ParameterTypes.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromFQTN": "App.CouplingExamples.Library.ObjectCreations",
      "fromFile": "Library\\ObjectCreations.cs",
      "toClassName": "ParameterTypes",
      "toFQTN": "App.CouplingExamples.Library.ParameterTypes",
      "toFile": "Library\\ParameterTypes.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ParameterTypesSpecialized",
      "fromFQTN": "App.CouplingExamples.Library.ParameterTypesSpecialized",
      "fromFile": "Library\\ParameterTypesSpecialized.cs",
      "toClassName": "ParameterTypes",
      "toFQTN": "App.CouplingExamples.Library.ParameterTypes",
      "toFile": "Library\\ParameterTypes.cs",
      "usageType": "extends",
    },
    {
      "fromClassName": "FunctionCalls",
      "fromFQTN": "App.CouplingExamples.Library.FunctionCalls",
      "fromFile": "Library\\FunctionCalls.cs",
      "toClassName": "BlubControllerOne1",
      "toFQTN": "App.CouplingExamplesOne.BlubControllerOne1",
      "toFile": "BlubController.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromFQTN": "App.CouplingExamples.Library.ObjectCreations",
      "fromFile": "Library\\ObjectCreations.cs",
      "toClassName": "BlubControllerOne1",
      "toFQTN": "App.CouplingExamplesOne.BlubControllerOne1",
      "toFile": "BlubController.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "FunctionCalls",
      "fromFQTN": "App.CouplingExamples.Library.FunctionCalls",
      "fromFile": "Library\\FunctionCalls.cs",
      "toClassName": "BlubControllerOne2",
      "toFQTN": "App.CouplingExamplesOne.BlubControllerOne2",
      "toFile": "BlubController.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromFQTN": "App.CouplingExamples.Library.ObjectCreations",
      "fromFile": "Library\\ObjectCreations.cs",
      "toClassName": "BlubControllerOne2",
      "toFQTN": "App.CouplingExamplesOne.BlubControllerOne2",
      "toFile": "BlubController.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "FunctionCalls",
      "fromFQTN": "App.CouplingExamples.Library.FunctionCalls",
      "fromFile": "Library\\FunctionCalls.cs",
      "toClassName": "BlubControllerTwo1",
      "toFQTN": "App.CouplingExamplesTwo.BlubControllerTwo1",
      "toFile": "BlubController.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromFQTN": "App.CouplingExamples.Library.ObjectCreations",
      "fromFile": "Library\\ObjectCreations.cs",
      "toClassName": "BlubControllerTwo1",
      "toFQTN": "App.CouplingExamplesTwo.BlubControllerTwo1",
      "toFile": "BlubController.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromFQTN": "App.CouplingExamples.Library.ObjectCreations",
      "fromFile": "Library\\ObjectCreations.cs",
      "toClassName": "BlubControllerTwo2",
      "toFQTN": "App.CouplingExamplesTwo.BlubControllerTwo2",
      "toFile": "BlubController.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for static class using 1`] = `
{
  "metrics": Map {
    "ClassA_And_B.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Main.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromFQTN": "Programm.Program",
      "fromFile": "Main.cs",
      "toClassName": "ClassB",
      "toFQTN": "StaticUsedNamespace.ClassB",
      "toFile": "ClassA_And_B.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for static method call in for loop 1`] = `
{
  "metrics": Map {
    "ClassA.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
    "ClassB.cs" => {
      "coupling_between_objects": 3,
      "incoming_dependencies": 2,
      "instability": 0.3333333333333333,
      "outgoing_dependencies": 1,
    },
    "ClassC.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 2,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Program.cs" => {
      "coupling_between_objects": 3,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 3,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromFQTN": "ProgramNamespace.Program",
      "fromFile": "Program.cs",
      "toClassName": "ClassA",
      "toFQTN": "ClassANamespace.ClassA",
      "toFile": "ClassA.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ClassA",
      "fromFQTN": "ClassANamespace.ClassA",
      "fromFile": "ClassA.cs",
      "toClassName": "ClassB",
      "toFQTN": "ClassBNamespace.ClassB",
      "toFile": "ClassB.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromFQTN": "ProgramNamespace.Program",
      "fromFile": "Program.cs",
      "toClassName": "ClassB",
      "toFQTN": "ClassBNamespace.ClassB",
      "toFile": "ClassB.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ClassB",
      "fromFQTN": "ClassBNamespace.ClassB",
      "fromFile": "ClassB.cs",
      "toClassName": "ClassC",
      "toFQTN": "ClassCNamespace.ClassC",
      "toFile": "ClassC.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromFQTN": "ProgramNamespace.Program",
      "fromFile": "Program.cs",
      "toClassName": "ClassC",
      "toFQTN": "ClassCNamespace.ClassC",
      "toFile": "ClassC.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for static system.console.writeline using 1`] = `
{
  "metrics": Map {
    "System.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Main.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromFQTN": "Programm.Program",
      "fromFile": "Main.cs",
      "toClassName": "Console",
      "toFQTN": "System.Console",
      "toFile": "System.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for static using 1`] = `
{
  "metrics": Map {
    "Classes.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "ProgramFile.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
        "fromClassName": "ProgramClass",
        "fromFQTN": "ProgramNamespace.ProgramClass",
        "fromFile": "ProgramFile.cs",
        "toClassName": "ClassA",
        "toFQTN": "StaticUsedNamespace.ClassA",
        "toFile": "Classes.cs",
        "usageType": "usage",
    },
    {
      "fromClassName": "ProgramClass",
      "fromFQTN": "ProgramNamespace.ProgramClass",
      "fromFile": "ProgramFile.cs",
      "toClassName": "ClassB",
      "toFQTN": "NormalUsedNamespace.ClassB",
      "toFile": "Classes.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for struct 1`] = `
{
  "metrics": Map {
    "Program.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
    "StructFile.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromFQTN": "CsharpStruct.Program",
      "fromFile": "Program.cs",
      "toClassName": "Employee",
      "toFQTN": "StructNamespace.Employee",
      "toFile": "StructFile.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for two namespace containing the same class name 1`] = `
{
  "metrics": Map {
    "Programm.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
    "TwoNamespaceWithSameClassName.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromFQTN": "mainNamespace.Program",
      "fromFile": "Programm.cs",
      "toClassName": "SameClass",
      "toFQTN": "NumberOne.SameClass",
      "toFile": "TwoNamespaceWithSameClassName.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromFQTN": "mainNamespace.Program",
      "fromFile": "Programm.cs",
      "toClassName": "SameClass",
      "toFQTN": "NumberTwo.SameClass",
      "toFile": "TwoNamespaceWithSameClassName.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for usage of class in the same file 1`] = `
{
  "metrics": Map {
    "Program.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromFQTN": "mainNamespace.Program",
      "fromFile": "Program.cs",
      "toClassName": "DoThing",
      "toFQTN": "mainNamespace.DoThing",
      "toFile": "Program.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for usage of delegates in class in the same file 1`] = `
{
  "metrics": Map {
    "Program.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "Mainy",
      "fromFQTN": "DelegateNamespace.Mainy",
      "fromFile": "Program.cs",
      "toClassName": "MyDelegate",
      "toFQTN": "DelegateNamespace.MyDelegate",
      "toFile": "Program.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for usage of interface in class method in the same file 1`] = `
{
  "metrics": Map {
    "ClassToInterface.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
    "Program.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "OtherProgram",
      "fromFQTN": "ClassToInterfaceNamespace.OtherProgram",
      "fromFile": "ClassToInterface.cs",
      "toClassName": "MyInterface",
      "toFQTN": "ClassToInterfaceNamespace.MyInterface",
      "toFile": "ClassToInterface.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "FirstInterface",
      "fromFQTN": "mainNamespace.FirstInterface",
      "fromFile": "Program.cs",
      "toClassName": "SecondInterface",
      "toFQTN": "mainNamespace.SecondInterface",
      "toFile": "Program.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > when the code contains extension method 1`] = `
{
  "metrics": Map {
  "ExtensionMethod.cs" => {
        "coupling_between_objects": 2,
        "incoming_dependencies": 1,
        "instability": 0.5,
        "outgoing_dependencies": 1,
      },
  "Program.cs" => {
          "coupling_between_objects": 1,
          "incoming_dependencies": 0,
          "instability": 1,
          "outgoing_dependencies": 1,
        },
  "Enum.cs" => {
            "coupling_between_objects": 1,
            "incoming_dependencies": 1,
            "instability": 0,
            "outgoing_dependencies": 0,
          },
  },
  "relationships": [
  {
        "fromClassName": "ExtensionMethods2",
        "fromFQTN": "mainNamespace.ExtensionMethods2",
        "fromFile": "Program.cs",
        "toClassName": "MyExtensions",
        "toFQTN": "ExtensionMethods.MyExtensions",
        "toFile": "ExtensionMethod.cs",
        "usageType": "usage",
      },
  {
          "fromClassName": "MyExtensions",
          "fromFQTN": "ExtensionMethods.MyExtensions",
          "fromFile": "ExtensionMethod.cs",
          "toClassName": "EnumType",
          "toFQTN": "EnumNamespace.EnumType",
          "toFile": "Enum.cs",
          "usageType": "usage",
        },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > when the code contains type conversion 1`] = `
{
  "metrics": Map {
    "ClassAFile.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
    "ClassBFile.cs" => {
      "coupling_between_objects": 4,
      "incoming_dependencies": 3,
      "instability": 0.25,
      "outgoing_dependencies": 1,
    },
    "Program.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 2,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromFQTN": "ProgramNamespace.Program",
      "fromFile": "Program.cs",
      "toClassName": "ClassA",
      "toFQTN": "classANamespace.ClassA",
      "toFile": "ClassAFile.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromFQTN": "ProgramNamespace.Program",
      "fromFile": "Program.cs",
      "toClassName": "ClassAFactory",
      "toFQTN": "classBNamespace.ClassAFactory",
      "toFile": "ClassBFile.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromFQTN": "ProgramNamespace.Program",
      "fromFile": "Program.cs",
      "toClassName": "ClassB",
      "toFQTN": "classBNamespace.ClassB",
      "toFile": "ClassBFile.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ClassA",
      "fromFQTN": "classANamespace.ClassA",
      "fromFile": "ClassAFile.cs",
      "toClassName": "ClassB",
      "toFQTN": "classBNamespace.ClassB",
      "toFile": "ClassBFile.cs",
      "usageType": "extends",
    },
    {
      "fromClassName": "ClassAFactory",
      "fromFQTN": "classBNamespace.ClassAFactory",
      "fromFile": "ClassBFile.cs",
      "toClassName": "ClassB",
      "toFQTN": "classBNamespace.ClassB",
      "toFile": "ClassBFile.cs",
      "usageType": "usage",
    },
  ],
}
`;
